--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -3,12 +3,12 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp1"
-        mc:Ignorable="d" DataContext="Video"
+        xmlns:local="clr-namespace:WpfApp1" d:DataContext="{d:DesignInstance Type=local:Video}"
+        mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <MediaElement HorizontalAlignment="Left" Height="224" Margin="60,76,0,0" VerticalAlignment="Top" Width="396" Source="Video_source"/>
         <Button Content="Choose file" HorizontalAlignment="Left" Height="46" Margin="217,334,0,0" VerticalAlignment="Top" Width="94" Click="Button_Click"/>
+        <Image HorizontalAlignment="Left" Height="212" Margin="129,82,0,0" VerticalAlignment="Top" Width="268" Source="{Binding Video_source}"/>
 
     </Grid>
 </Window>
