--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -22,7 +22,9 @@
         <Button Grid.Column="0" Grid.Row="3" Content="Choose file" HorizontalAlignment="Center" Height="50"  VerticalAlignment="Center" Width="100" Click="Button_Click"/>
 
         <Button Grid.Column="1" Grid.Row="3" Content="Video" HorizontalAlignment="Center" VerticalAlignment="Center" Click="Button_Click_1" Height="50" Width="100"/>
-        
+
+        <Button Grid.Column="2" Grid.Row="2" Content="Find" Height="50" Width="100" Margin="0, 0, 10, 0" Click="Button_Click_2"/>
+
         <Canvas Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Grid.RowSpan="3" x:Name="canv" Margin="20,20,20,20" ClipToBounds="True" >
             <Image Name="image" Height="{Binding ActualHeight, ElementName=canv, Mode=OneWay}" Width="{Binding ActualWidth, ElementName=canv, Mode=OneWay}" Source="{Binding Video_source}" Canvas.Top="0" Canvas.Left="0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
             <Canvas Name="rec_can"  Height="{Binding ActualHeight, ElementName=image, Mode=OneWay}"  Width="{Binding ActualWidth, ElementName=image, Mode=OneWay}">
@@ -33,7 +35,7 @@
 
         <Image Grid.Column="2" Grid.Row="0" Grid.RowSpan="2" x:Name="img" Margin="20,20,20,20"/>
         
-        <ListBox Grid.Column="2" Grid.Row="2" Grid.RowSpan="2" d:ItemsSource="{d:SampleData ItemCount=5}" Name="box" Margin="20,20,20,20" RenderTransformOrigin="0.43,-0.486" ItemsSource="{Binding List_Of_Frames}" SelectionChanged="ListBox_SelectionChanged"/>
+        <ListBox Grid.Column="2" Grid.Row="3" Grid.RowSpan="1" d:ItemsSource="{d:SampleData ItemCount=5}" Name="box" Margin="20,20,20,20" RenderTransformOrigin="0.43,-0.486" ItemsSource="{Binding List_Of_Frames}" SelectionChanged="ListBox_SelectionChanged"/>
 
 
     </Grid>
