--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1" xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf" d:DataContext="{d:DesignInstance Type=local:Video}"
         mc:Ignorable="d"
-        Title="MainWindow" Name ="MWindow"  Height="450" Width="800">
+        Title="MainWindow" Name ="MWindow"  Height="450" Width="811">
     <Grid Margin="0,0,0,-16">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -37,7 +37,7 @@
         <Image Grid.Row="2" x:Name="img" Margin="6,10,163,10"/>
 
         <ListBox Grid.Column="2" Grid.Row="2" Grid.RowSpan="2" d:ItemsSource="{d:SampleData ItemCount=5}" Name="box" Margin="20,55,20,20" RenderTransformOrigin="0.43,-0.486" ItemsSource="{Binding List_Of_Frames}" SelectionChanged="ListBox_SelectionChanged"/>
-        <Button Content="graph" HorizontalAlignment="Left" Margin="20,0,0,0" Grid.Row="3" VerticalAlignment="Center" Click="Button_Click_3" Height="20" Width="35" />
+        <Button Content="graph" HorizontalAlignment="Left" Margin="20,0,0,0" Grid.Row="3" VerticalAlignment="Center" Click="Button_Click_3" Height="50" Width="37" />
         <lvc:CartesianChart Name="chart" Grid.Column="1" Margin="98,20,20,106" Grid.RowSpan="3" Grid.ColumnSpan="2" />
         <Button Content="+" Margin="212,25,32,58" Grid.Row="3" Grid.Column="1" RenderTransformOrigin="0.5,0.5" Click="Button_Click_4">
             <Button.RenderTransform>
@@ -59,5 +59,6 @@
                 </TransformGroup>
             </Button.RenderTransform>
         </Button>
+        <TextBox x:Name="textBox" Grid.Column="2" HorizontalAlignment="Center" Margin="0,11,0,0" Grid.Row="2" TextWrapping="NoWrap" VerticalAlignment="Top" Width="120" />
     </Grid>
 </Window>
