--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -26,7 +26,7 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <Button Grid.Row="6" Grid.Column="1" Content="Folder" Margin="20,20,20,20"  Click="Button_Click" />
+        <Button Grid.Row="6" Grid.Column="1" Content="Photo" Margin="20,20,20,20"  Click="Button_Click" />
 
         <Button Grid.Row="6" Grid.Column="2" Content="Video" Margin="20,20,20,20" Click="Button_Click_1" />
 
